# fortune500

./: .gitignore  .gitmodules  00.0_scraper.py  00_run_full_pipeline.sh  01_extract_sections.py  01_scraper.py  02_parser.py  02_run_full_pipeline.sh  03_extract_sections.py  03_init_tables.sql  04_extraction.sql  04_init_tables.sql  05_1_add_action_to_market.sql  05_create_graph.sql  05_extraction.sql  06_create_property_graph_ddl.sql  06_prepare_property_graph.sql  07_create_property_graph_ddl.sql  README.md  SCRIPTS.md  create_graph.sql  create_property_graph_ddl.sql  extract_sections.py  extraction.sql  list.csv  list_models.py  parser.py  pipeline.ipynb  prepare_property_graph.sql  requirements.txt  run_full_pipeline.sh  scraper.py
grove/: Timeline.md
python_pipeline/: .env.example  config.py  extract.py  extract_vertex.py  load_kuzu.py  pyproject.toml  run.py  transform.py
python_pipeline/entity_normalization/: COMPETITOR_RESOLUTION.md  COMPETITOR_TAXONOMY.md  GRAPH_MODEL.md  JOURNAL.md  NORMALIZED_RISK_ANALYSIS.md  RISK_CATEGORIES.md  categorize_competitor_markets.py  categorize_markets.py  categorize_risks.py  resolve_competitors.py
